@@ -1,3 +1,9 @@
+2012-03-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	PR ld/12152
+	* elfxx-sparc.c (_bfd_sparc_elf_relocate_section): Also ignore
+	overflows for R_SPARC_UA32 in .stab sections.
+
 2012-03-01  Alan Modra  <amodra@gmail.com>
 
 	* elfxx-tilegx.c (tilegx_elf_relocate_section): Silence bogus warning.
